syntax = "proto3";

package Battlenet.JSON.Login;

// Java generation options
option java_package = "br.net.dd.netherwingcore.proto.login";
option java_outer_classname = "LoginProto";
option optimize_for = CODE_SIZE;

message ErrorResponse {
}

enum FormType {
  LOGIN_FORM = 0;
}

message FormInput {
  string input_id = 1;
  string type = 2;
  string label = 3;
  uint32 max_length = 4;
}

message FormInputs {
  FormType type = 1;
  repeated FormInput inputs = 2;
}

message FormInputValue {
  string input_id = 1;
  string value = 2;
  string srp_url = 3;
  string srp_js = 4;
}

message LoginForm {
  string platform_id = 1;
  string program_id = 2;
  string version = 3;
  repeated FormInputValue inputs = 4;
}

message SrpLoginChallenge {
  uint32 version = 1;
  uint32 iterations = 2;
  string modulus = 3;
  string generator = 4;
  string hash_function = 5;
  string username = 6;
  string salt = 7;
  string public_B = 8;
  bool eligible_credential_upgrade = 9;
}

enum AuthenticationState {
  LOGIN = 0;
  LEGAL = 1;
  AUTHENTICATOR = 2;
  DONE = 3;
}

message LoginResult {
  AuthenticationState authentication_state = 1;
  string error_code = 2;
  string error_message = 3;
  string url = 4;
  string login_ticket = 5;
  string server_evidence_M2 = 6;
  string next_url = 7;
}

message LoginRefreshResult {
  uint64 login_ticket_expiry = 1;
  bool is_expired = 2;
}

message GameAccountInfo {
  string display_name = 1;
  uint32 expansion = 2;
  bool is_suspended = 3;
  bool is_banned = 4;
  uint64 suspension_expires = 5;
  string suspension_reason = 6;
}

message GameAccountList {
  repeated GameAccountInfo game_accounts = 1;
}